@@ -9,6 +9,7 @@ v2.1.3
 ! imdb::is_serial() and imdb::get_episode_details() were broken due to site changes
 ! imdb::episodes() was broken due to site changes. ATTENTION: with this rewrite of the method,
   the outer array no longer starts at 0 but reflects the real season number (as often requested)!
++ imdb::get_episode_details() - added "airdate" as requested by ticket:290
 
 v2.1.2 (19.01.2012)
 -------------------
